--- a/TODOs.org
+++ b/TODOs.org
@@ -1,6 +1,8 @@
 * ISSUES
 ** DONE tests for client installation
    CLOSED: [2017-07-21 Fri 13:58]
+** DONE log mails and responses
+   CLOSED: [2017-07-24 Mon 11:17]
 ** TODO services
 ** TODO services tests
 ** TODO client services
