--- a/TODOs.org
+++ b/TODOs.org
@@ -10,6 +10,7 @@
    CLOSED: [2017-07-25 Tue 11:56]
 ** DONE services tests
    CLOSED: [2017-07-25 Tue 11:57]
+** TODO services translation - title, description
 ** TODO client services
 ** TODO client services test
 ** TODO orders
@@ -24,3 +25,4 @@
 ** TODO client account rest
 ** TODO client tariff restrictions rest
 ** TODO client status rest
+** TODO django supervisor
