--- a/TODOs.org
+++ b/TODOs.org
@@ -35,8 +35,12 @@
    CLOSED: [2017-08-01 Tue 17:44]
 ** DONE client service calc country
    CLOSED: [2017-08-02 Wed 14:36]
-** TODO client services types
+** DONE services types && validators
+   CLOSED: [2017-08-03 Thu 11:20]
+** DONE services defaults
+   CLOSED: [2017-08-03 Thu 17:04]
 ** TODO client services autocreate
+** TODO client services autoupdate
 ** TODO client status info (is_enabled, rooms limit)
 ** TODO orders
 ** TODO orders creation by tasks
