--- a/TODOs.org
+++ b/TODOs.org
@@ -41,7 +41,8 @@
    CLOSED: [2017-08-03 Thu 17:04]
 ** DONE client services autocreate
    CLOSED: [2017-08-07 Mon 15:06]
-** TODO client services autocreate tests
+** DONE client services autocreate tests
+   CLOSED: [2017-08-07 Mon 17:19]
 ** TODO email error logger
 ** TODO amazon or ?? logs
 ** TODO client services autoupdate
