--- a/TODOs.org
+++ b/TODOs.org
@@ -47,7 +47,8 @@
    CLOSED: [2017-08-07 Mon 18:49]
 ** DONE amazon and sentry logs
    CLOSED: [2017-08-07 Mon 18:49]
-** TODO client status info (is_enabled, rooms limit)
+** DONE client status info (is_enabled, rooms limit)
+   CLOSED: [2017-08-09 Wed 14:25]
 ** TODO client services autoupdate
 ** TODO orders
 ** TODO orders creation by tasks
