--- a/TODOs.org
+++ b/TODOs.org
@@ -67,7 +67,8 @@
    CLOSED: [2017-09-15 Fri 18:18]
 ** DONE orders rest
    CLOSED: [2017-09-21 Thu 12:07]
-** TODO orders rest tests
+** DONE orders rest tests
+   CLOSED: [2017-09-21 Thu 14:47]
 ** TODO client disabling by orders 
 ** TODO client uninstall
 ** TODO payment type
