--- a/TODOs.org
+++ b/TODOs.org
@@ -115,8 +115,10 @@
    CLOSED: [2017-11-02 Thu 17:12]
 
 
-** TODO stripe
-** TODO stripe tests
+** DONE stripe
+   CLOSED: [2017-11-08 Wed 12:31]
+** DONE stripe tests
+   CLOSED: [2017-11-08 Wed 12:31]
 ** TODO organization
 ** TODO bill
 ** TODO not periodical order
