--- a/TODOs.org
+++ b/TODOs.org
@@ -125,13 +125,14 @@
    CLOSED: [2017-11-16 Thu 17:40]
 ** DONE service default rooms count
    CLOSED: [2017-11-24 Fri 19:05]
+** TODO client additional info (ip)
 ** TODO organization
 ** TODO bill
 ** TODO coverage 100%
 ** TODO not periodical order
 ** TODO registration refactor
 ** TODO order prolongation interface
-** TODO client additional info (ip, mb actions)
+** TODO maxibooking client actions
 ** TODO multiprocessing
 
 
