--- a/TODOs.org
+++ b/TODOs.org
@@ -132,7 +132,10 @@
 
 ** DONE individual user
    CLOSED: [2017-12-01 Fri 13:43]
-** TODO bill
+** DONE bill
+   CLOSED: [2017-12-11 Mon 11:38]
+** TODO service category
+** TODO update endpoint
 ** TODO todos
 ** TODO django 2.0
 ** TODO test rbk
