--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-24 14:18+0000\n"
+"POT-Creation-Date: 2018-01-29 08:40+0000\n"
 "PO-Revision-Date: 2017-11-16 13:42+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,7 +19,7 @@ msgstr ""
 "X-Translated-Using: django-rosetta 0.7.13\n"
 
 #: billing/lib/mb.py:69 billing/lib/mb.py:100
-#: billing/templates/emails/registration_fail.html:6 clients/views.py:240
+#: billing/templates/emails/registration_fail.html:6 clients/views.py:252
 msgid "Registation failed"
 msgstr ""
 
@@ -50,6 +50,24 @@ msgstr ""
 msgid "New order #"
 msgstr ""
 
+#: billing/templates/emails/new_order.html:10
+#, python-format
+msgid ""
+"\n"
+"    <p>Hello!</p>\n"
+"\n"
+"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'."
+"</p>\n"
+"    <p>It must be paid before %(expired)s</p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of "
+"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>If you have any questions, you can find on them an answer in the "
+"knowledge base of the 'Maxibooking' system at the address: https://support."
+"maxi-booking.com or by sending an email to the support service: support@maxi-"
+"booking.com.</p>\n"
+"\n"
+msgstr ""
+
 #: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:61
 msgid "Your account is disabled"
 msgstr ""
@@ -62,7 +80,7 @@ msgstr ""
 msgid "Order will expire soon"
 msgstr ""
 
-#: billing/templates/emails/registration.html:6 clients/views.py:229
+#: billing/templates/emails/registration.html:6 clients/views.py:241
 msgid "Registation successefull"
 msgstr ""
 
@@ -75,7 +93,7 @@ msgid ""
 "    <p>To enter the program, please follow the link: %(url)s\n"
 "        and use the user's credentials:</p>\n"
 "    <ul>\n"
-"        <li>username: %(login)s</li>\n"
+"        <li>username: admin</li>\n"
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
@@ -385,6 +403,10 @@ msgstr ""
 msgid "Client service with this type already exists."
 msgstr ""
 
+#: clients/views.py:55
+msgid "New order created"
+msgstr ""
+
 #: finances/models.py:31
 #, fuzzy
 #| msgid "services"
@@ -521,10 +543,6 @@ msgstr ""
 
 #: finances/systems/types.py:267
 msgid "stripe description"
-msgstr ""
-
-#: finances/tasks.py:22
-msgid "New order created #"
 msgstr ""
 
 #: finances/tasks.py:40
