--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -8,17 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-29 08:40+0000\n"
-"PO-Revision-Date: 2018-01-29 08:24+0000\n"
+"POT-Creation-Date: 2018-01-29 09:22+0000\n"
+"PO-Revision-Date: 2018-01-29 09:25+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Translated-Using: django-rosetta 0.7.13\n"
 
 #: billing/lib/mb.py:69 billing/lib/mb.py:100
@@ -59,28 +57,19 @@ msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "\n"
-"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'."
-"</p>\n"
+"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'.</p>\n"
 "    <p>It must be paid before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
-"    <p>If you have any questions, you can find on them an answer in the "
-"knowledge base of the 'Maxibooking' system at the address: https://support."
-"maxi-booking.com or by sending an email to the support service: support@maxi-"
-"booking.com.</p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>If you have any questions, you can find on them an answer in the knowledge base of the 'Maxibooking' system at the address: https://support.maxi-booking.com or by sending an email to the support service: support@maxi-booking.com.</p>\n"
 "\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "\n"
-"<p>Сформирован заказ №%(id)s от %(created)s для оплаты использования "
-"программы «Максибукинг».</p>\n"
+"<p>Сформирован заказ №%(id)s от %(created)s для оплаты использования программы «Максибукинг».</p>\n"
 "<p>Его необходимо оплатить до %(expired)s</p>\n"
-"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы "
-"«Максибукинг» перейдя по ссылке: %(url)s </p>\n"
-"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний "
-"системы «Максибукинг» по адресу: https://support.maxi-booking.com или "
-"отправив запрос на email службы поддержки: support@maxi-booking.com</p>\n"
+"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу: https://support.maxi-booking.com или отправив запрос на email службы поддержки: support@maxi-booking.com</p>\n"
 
 #: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:61
 msgid "Your account is disabled"
@@ -91,8 +80,37 @@ msgid "Your payment was successful"
 msgstr ""
 
 #: billing/templates/emails/order_payment_notification.html:6
+#: clients/views.py:55 finances/tasks.py:40
 msgid "Order will expire soon"
+msgstr "Необходимо оплатить заказ"
+
+#: billing/templates/emails/order_payment_notification.html:10
+#, python-format
+#| msgid ""
+#| "\n"
+#| "    <p>Hello!</p>\n"
+#| "\n"
+#| "    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'.</p>\n"
+#| "    <p>It must be paid before %(expired)s</p>\n"
+#| "    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+#| "    <p>If you have any questions, you can find on them an answer in the knowledge base of the 'Maxibooking' system at the address: https://support.maxi-booking.com or by sending an email to the support service: support@maxi-booking.com.</p>\n"
+#| "\n"
+msgid ""
+"\n"
+"    <p>Hello!</p>\n"
+"\n"
+"    <p>You need to pay order #%(id)s from %(created)s for using the \"Maxbooking\".</p>\n"
+"    <p>Payment must be made before %(expired)s</p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"\n"
 msgstr ""
+"\n"
+"<p>Здравствуйте!</p>\n"
+"\n"
+"<p>Вам необходимо оплатить заказ № %(id)s от %(created)s за использование программы «Максибукинг».</p>\n"
+"<p>Его необходимо оплатить до %(expired)s</p>\n"
+"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу: https://support.maxi-booking.com или отправив запрос на email службы поддержки: support@maxi-booking.com</p>\n"
 
 #: billing/templates/emails/registration.html:6 clients/views.py:241
 msgid "Registation successefull"
@@ -111,8 +129,7 @@ msgstr "Успешная регистрация"
 #| "        <li>password: %(password)s</li>\n"
 #| "    </ul>\n"
 #| "\n"
-#| "    <p>Knowledge base for work in the program: https://support.maxi-"
-#| "booking.com</p>\n"
+#| "    <p>Knowledge base for work in the program: https://support.maxi-booking.com</p>\n"
 #| "    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
 #| "\n"
 msgid ""
@@ -126,8 +143,7 @@ msgid ""
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Knowledge base for work in the program: https://support.maxi-booking."
-"com</p>\n"
+"    <p>Knowledge base for work in the program: https://support.maxi-booking.com</p>\n"
 "    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
 "\n"
 msgstr ""
@@ -141,10 +157,8 @@ msgstr ""
 "        <li>пароль: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>База знаний по работе в программе: https://support.maxi-booking.com</"
-"p>\n"
-"    <p>Поддержку можно получить обратившись по email: support@maxi-booking."
-"com</p>\n"
+"    <p>База знаний по работе в программе: https://support.maxi-booking.com</p>\n"
+"    <p>Поддержку можно получить обратившись по email: support@maxi-booking.com</p>\n"
 "\n"
 
 #: billing/templates/emails/registration_fail.html:10
@@ -152,14 +166,12 @@ msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "    <p>When installing the program \"Maxibooking\" an error occurred.</p>\n"
-"    <p>To resolve this error, please contact support at: support@maxi-"
-"booking.com</p> \n"
+"    <p>To resolve this error, please contact support at: support@maxi-booking.com</p> \n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "<p>При установке программы «Максибукинг» произошла ошибка.</p>\n"
-"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по "
-"адресу: support@maxi-booking.com</p> \n"
+"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по адресу: support@maxi-booking.com</p> \n"
 
 #: billing/templates/emails/sign.html:2
 msgid ""
@@ -341,8 +353,8 @@ msgstr ""
 
 #: clients/models.py:269
 msgid ""
-"Enter a valid login. This value may contain only lowercase letters, numbers, "
-"and \"-\" character."
+"Enter a valid login. This value may contain only lowercase letters, numbers,"
+" and \"-\" character."
 msgstr ""
 
 #: clients/models.py:273
@@ -457,10 +469,6 @@ msgstr ""
 #: clients/models.py:593
 msgid "Client service with this type already exists."
 msgstr ""
-
-#: clients/views.py:55
-msgid "New order created"
-msgstr "Создан новый заказ"
 
 #: finances/models.py:31
 #, fuzzy
@@ -600,9 +608,9 @@ msgstr ""
 msgid "stripe description"
 msgstr ""
 
-#: finances/tasks.py:40
-msgid "Order #{} will expire soon"
-msgstr ""
+#: finances/tasks.py:22
+msgid "New order created"
+msgstr "Создан новый заказ"
 
 #: finances/templates/finances/bill.html:114
 msgid "piece"
