email rus: complete

--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-29 09:22+0000\n"
+"POT-Creation-Date: 2018-01-29 11:25+0000\n"
 "PO-Revision-Date: 2017-11-16 13:42+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -68,16 +68,38 @@ msgid ""
 "\n"
 msgstr ""
 
-#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:61
+#: billing/templates/emails/order_client_disabled.html:6 clients/views.py:55
+#: finances/tasks.py:61
 msgid "Your account is disabled"
+msgstr ""
+
+#: billing/templates/emails/order_client_disabled.html:10
+#, python-format
+msgid ""
+"\n"
+"        <p>Hello!</p>\n"
+"        <p>Due to payment arrears, your account in the 'Maxibooking' system "
+"is blocked.</p>\n"
+"        <p>To unlock your account, go to your personal account and pay for "
+"the orders %(url)s</p> \n"
+"    "
 msgstr ""
 
 #: billing/templates/emails/order_paid.html:6 finances/signals.py:44
 msgid "Your payment was successful"
 msgstr ""
 
+#: billing/templates/emails/order_paid.html:10
+#, python-format
+msgid ""
+"\n"
+"    <p>Hello!</p>\n"
+"    <p>Thank you for payment!</p>\n"
+"    <p>Order #%(id)s from %(created)s was paid.</p>\n"
+msgstr ""
+
 #: billing/templates/emails/order_payment_notification.html:6
-#: clients/views.py:55 finances/tasks.py:40
+#: finances/tasks.py:40
 msgid "Order will expire soon"
 msgstr ""
 
